feat: 검색한 유저를 클릭하면 유저페이지로 이동하는 기능 추가+devtools활성화
검색한 유저를 클릭하면 유저페이지로 이동하는 기능 추가+devtools활성화//TODO NoSuchElementException 오류 해결