@@ -88,7 +88,7 @@ public class UserPageService {
             List<PostDto> postsList = user.getPostList().stream()
                 // 한 포스트에 쓰인 사진 리스트 중 첫번째 사진을 썸네일로 설정하여 해당 파일의 경로 사용
                 .map(post -> new PostDto(post.getPostId(),
-                    post.getPostImages().get(0).getFilepath()))
+                    post.getPostImages().getFirst().getFilepath()))
                 .collect(Collectors.toList());
 
             // 게시물 리스트가 비어있을때
